CMBSandbox4/src/objects/Credit_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Credited__c</fullName>
        <label>Amount Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <description>Credit reason is mandatory field on invoice line item</description>
        <inlineHelpText>Credit reason is mandatory field on invoice line item</inlineHelpText>
        <label>Credit Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit/PrePaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours Over SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMB Inefficiencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Ratio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <referenceTo>Credit__c</referenceTo>
        <relationshipLabel>Credit Line Items</relationshipLabel>
        <relationshipName>Credit_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credited_Date__c</fullName>
        <label>Credited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Credited__c</fullName>
        <label>Hours Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line Item</label>
        <referenceTo>Line_Item__c</referenceTo>
        <relationshipLabel>Credit Line Items</relationshipLabel>
        <relationshipName>Credit_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>related to invoice</description>
        <inlineHelpText>related to invoice</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Credit Line Items</relationshipLabel>
        <relationshipName>Credit_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>opportunity is required for invoice line item</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Line Items</relationshipLabel>
        <relationshipName>Credit_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>HarvestProject__c</referenceTo>
        <relationshipLabel>Credit Line Items</relationshipLabel>
        <relationshipName>Credit_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Credit Line Item</label>
    <nameField>
        <displayFormat>CRL-{000000}</displayFormat>
        <label>Credit Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Either_credit_amount_or_hours</fullName>
        <active>true</active>
        <description>either amount should be credited or hours.</description>
        <errorConditionFormula>OR
(AND(!ISNULL(Hours_Credited__c),!ISNULL(Amount_Credited__c)),
 AND(ISNULL(Hours_Credited__c),ISNULL(Amount_Credited__c)),
Hours_Credited__c&lt;=0,
Amount_Credited__c&lt;=0
)</errorConditionFormula>
        <errorMessage>Either amount could be credited or hours</errorMessage>
    </validationRules>
</CustomObject>